# zipline-chronon

./: .bazelproject  .bazelrc  .bazelrc.local  .gitattributes  .gitignore  .grype.yaml  .jvmopts  .mill-version  .plugin-versions  .scalafix.conf  .scalafmt.conf  .tool-versions  BUILD.bazel  CLAUDE.md  ChrononOrchestrator.cfg  ChrononOrchestrator.tla  Dockerfile  README.md  WORKSPACE  build.mill  build.sbt  build.sh  chronon_dataproc_submitter.env  cli_readme.md  databricks-uc-integration.md  devnotes.md  docker-compose.yml  maven_install.json  requirements.txt  scala_config.bzl  spark_install.json
agent/: BUILD.bazel
aggregator/: BUILD.bazel  package.mill
api/: BUILD.bazel  package.mill
api/py/: BUILD.bazel  example.py  print_path.py  pyproject.toml  python-api-build.sh  requirements.txt  requirements_lock.txt  setup.py  test_debug.py  thrift_gen.sh  tox.ini  update_requirements.py
api/py/ai/chronon/: constants.py  group_by.py  join.py  logger.py  model.py  query.py  types.py  utils.py  windows.py
api/py/ai/chronon/api/: ttypes.py
api/py/ai/chronon/cli/: entrypoint.py  git_utils.py  logger.py  logging.py
api/py/ai/chronon/eval/: __init__.py  query_parsing.py  sample_tables.py  table_scan.py
api/py/ai/chronon/lineage/: __init__.py
api/py/ai/chronon/observability/: ttypes.py
api/py/ai/chronon/orchestration/: ttypes.py
api/py/ai/chronon/repo/: __init__.py  aws.py  compile.py  compile_models.py  compilev2.py  constants.py  default_runner.py  explore.py  extract_objects.py  gcp.py  hub_uploader.py  init.py  interactive.md  interactive.py  join_backfill.py  run.py  runner.py  serializer.py  utils.py  validator.py  zipline.py
api/py/requirements/: base.in  base.txt  dev.in  dev.txt
api/py/sample/: teams.json  teams.py
api/py/sample/group_bys/etsy_search/: visit_beacon.py
api/py/sample/group_bys/kaggle/: clicks.py  outbrain.py
api/py/sample/group_bys/quickstart/: purchases.py  returns.py  schema.py  users.py
api/py/sample/group_bys/risk/: merchant_data.py  transaction_events.py  user_data.py
api/py/sample/group_bys/sample_team/: entity_sample_group_by_from_module.py  group_by_with_kwargs.py  mutation_sample_group_by.py  sample_chaining_group_by.py  sample_group_by_from_join_part.py  sample_group_by_from_module.py  sample_group_by_group_by.py  sample_group_by_missing_input_column.py  sample_group_by_with_derivations.py  sample_non_prod_group_by.py
api/py/sample/joins/quickstart/: training_set.py
api/py/sample/joins/risk/: user_transactions.py
api/py/sample/joins/sample_team/: sample_chaining_join.py  sample_join_from_group_by_from_join.py  sample_label_join.py  sample_label_join_with_agg.py  sample_online_join.py
api/py/sample/models/quickstart/: test.py
api/py/sample/models/risk/: transaction_model.py
api/py/sample/scripts/: yarn_list.py
api/py/sample/sources/kaggle/: outbrain.py
api/py/sample/staging_queries/kaggle/: outbrain.py
api/py/sample/staging_queries/quickstart/: checkouts_external.py
api/py/sample/staging_queries/sample_team/: sample_staging_query.py
api/py/src/ai/chronon/: group_by.py  join.py  model.py  query.py  source.py  types.py  utils.py  windows.py
api/py/test/: BUILD.bazel  test_compile.py  test_decorator.py  test_explore.py  test_git_utils.py  test_group_by.py  test_join.py  test_run.py  test_teams.py  test_utils.py  test_validator.py
api/py/test/canary/: README.md
api/py/test/sample/: teams.json  teams.py
api/py/test/sample/aws/: teams.json
api/py/test/sample/gcp/: README.md  teams.json
api/python/: python-api-build.sh  tox.ini
api/python/ai/chronon/: airflow_helpers.py  constants.py  group_by.py  join.py  model.py  query.py  source.py  staging_query.py  types.py  utils.py
api/python/requirements/: base.in  base.txt  dev.txt
api/python/test/: test_compile.py  test_compilev3.py  test_explore.py  test_group_by.py  test_join.py  test_parse_teams.py  test_run.py  test_semantic_hashing.py  test_utils.py  test_validator.py
api/python/test/canary/: deprecated_teams.json  teams.py
api/python/test/sample/: teams.json  teams.py
api/thrift/: BUILD.bazel  agent.thrift  api.thrift  common.thrift  fetcher.thrift  hub.thrift  lineage.thrift  observability.thrift  orchestration.thrift  planner.thrift
cloud_aws/: BUILD.bazel  package.mill
cloud_aws/src/main/resources/: hudi_spark_confs.yaml
cloud_gcp/: BUILD.bazel  package.mill
cloud_gcp/src/main/resources/: additional-confs.yaml  dataproc-submitter-conf.yaml
cloud_gcp/src/test/resources/: BUILD.bazel
flink/: BUILD.bazel  package.mill
flink/src/test/resources/: logback-test.xml
hub/: BUILD.bazel
hub/app/controllers/: ApplicationController.scala  InMemKVStoreController.scala  JoinController.scala  ModelController.scala  Paginate.scala  SearchController.scala  TimeSeriesController.scala
hub/app/model/: Model.scala
hub/app/module/: DriftStoreModule.scala  DynamoDBModule.scala  InMemoryKVStoreModule.scala  ModelStoreModule.scala
hub/app/store/: DynamoDBMonitoringStore.scala  MonitoringModelStore.scala
hub/app/views/: index.scala.html
hub/conf/: application.conf  logback.xml  routes
hub/src/main/resources/: example_config.json  logback.xml
hub/test/controllers/: JoinControllerSpec.scala  ModelControllerSpec.scala  SearchControllerSpec.scala  TimeSeriesControllerSpec.scala
hub/test/resources/group_bys/: transaction_events.txn_group_by_merchant
hub/test/resources/models/: transaction_model.v1
hub/test/store/: DynamoDBMonitoringStoreTest.scala  MonitoringModelStoreTest.scala
online/: BUILD.bazel  package.mill
orchestration/: BUILD.bazel  README.md
orchestration/src/main/resources/: log4j2.properties
service/: BUILD.bazel  README.md  package.mill
service/src/main/resources/: log4j2.properties  logback.xml
service_commons/: BUILD.bazel  README.md  package.mill
spark/: BUILD.bazel  package.mill
spark/src/main/resources/: log4j2.properties  logback.xml
spark/src/test/resources/: logback-test.xml  logback.xml  test-driver-additional-confs.yaml
spark/src/test/scripts/: README.md  test_with_data.sh
(+2523 files in other folders)
