load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:license_kind.bzl", "license_kind")

license_kind(
    name = "zipline_ai",
)

license(
    name = "license",
    package_name = "zipline_packages",
    license_kinds = [":zipline_ai"],
    license_text = "Refer to Zipline Agreement Document",
)

package(
    default_package_metadata = [":license"],
    default_visibility = ["//visibility:public"],
)

exports_files(["maven_install.json"])

# Don't try to build this target, instead build individual module uber jars with appropriate main class
# This is currently only used to generate single SBOM file with all our dependencies across modules
jvm_binary(
    name = "zipline_packages",
    deploy_env = [
        "//tools/build_rules/cloud_gcp:cloud_gcp",
        "//tools/build_rules/flink:flink",
    ],
    main_class = "None",
    runtime_deps = [
        "//cloud_gcp:base_cloud_gcp_lib",
        "//flink:lib",
        "//service:lib",
    ],
)
