# TODO: To create a trimmed cloud_gcp target with only necessary dependencies and depend on it instead
shared_deps = [
    "//api:lib",
    "//api:thrift_java",
    "//cloud_gcp:base_cloud_gcp_lib",
    "//online:lib",
    "//spark:submission_lib",
    maven_artifact("com.google.cloud:google-cloud-bigtable"),
    maven_artifact("com.google.cloud:google-cloud-dataproc"),
    maven_artifact("com.google.protobuf:protobuf-java"),
    maven_artifact("com.google.api.grpc:proto-google-cloud-dataproc-v1"),
    maven_artifact("com.google.api.grpc:proto-google-longrunning-v1"),
    maven_artifact("com.google.api:gax"),
    maven_artifact("com.google.api:api-common"),
    maven_artifact("org.apache.logging.log4j:log4j-core"),
    maven_artifact("org.apache.logging.log4j:log4j-api"),
    maven_artifact("org.slf4j:slf4j-api"),
    maven_artifact("com.fasterxml.jackson.core:jackson-core"),
    maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
    maven_artifact_with_suffix("com.fasterxml.jackson.module:jackson-module-scala"),
]

scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = shared_deps,
)

test_deps = _SCALA_TEST_DEPS + shared_deps + [
    ":lib",
    maven_artifact("com.google.cloud:google-cloud-bigtable-emulator"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    # defined in prelude_bazel file
    jvm_flags = _JVM_FLAGS_FOR_ACCESSING_BASE_JAVA_CLASSES,
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
