scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = [
        "//api:lib",
        "//api:thrift_java",
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact("com.google.code.gson:gson"),
        maven_artifact("org.apache.datasketches:datasketches-memory"),
        maven_artifact("org.apache.datasketches:datasketches-java"),
        maven_artifact("org.apache.commons:commons-lang3"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-slf4j-impl"),
        maven_scala_artifact("org.scala-lang.modules:scala-collection-compat"),
    ],
)

test_deps = [
    ":lib",
    "//api:lib",
    "//api:thrift_java",
    # Libraries
    maven_artifact("org.slf4j:slf4j-api"),
    maven_artifact("org.apache.logging.log4j:log4j-slf4j-impl"),
    maven_artifact("com.google.code.gson:gson"),
    maven_artifact("org.apache.datasketches:datasketches-memory"),
    maven_artifact("org.apache.datasketches:datasketches-java"),
    maven_artifact("org.apache.commons:commons-lang3"),
    maven_artifact("org.apache.commons:commons-math3"),
    maven_artifact("org.scala-lang.modules:scala-collection-compat_2.12"),
    # Testing
    maven_scala_artifact("org.scalatest:scalatest-matchers-core"),
    maven_scala_artifact("org.scalatest:scalatest-core"),
    maven_scala_artifact("org.scalatest:scalatest"),
    maven_scala_artifact("org.scalatest:scalatest-flatspec"),
    maven_scala_artifact("org.scalatest:scalatest-funsuite"),
    maven_scala_artifact("org.scalatest:scalatest-shouldmatchers"),
    maven_scala_artifact("org.scalactic:scalactic"),
    maven_scala_artifact("org.scalatestplus:mockito-3-4"),
    maven_scala_artifact("org.mockito:mockito-scala"),
    maven_artifact("org.mockito:mockito-core"),
    maven_artifact("org.scalatest:scalatest-compatible"),
    maven_artifact("junit:junit"),
    maven_artifact("com.novocode:junit-interface"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
