scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//api:lib",
        "//api:thrift_java",
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact("com.google.code.gson:gson"),
        maven_artifact("org.apache.datasketches:datasketches-memory"),
        maven_artifact("org.apache.datasketches:datasketches-java"),
        maven_artifact("org.apache.commons:commons-lang3"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact("org.apache.logging.log4j:log4j-slf4j-impl"),
        maven_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
    ],
)

test_deps = [
    ":lib",
    "//api:lib",
    "//api:thrift_java",
    # Libraries
    maven_artifact("org.slf4j:slf4j-api"),
    maven_artifact("org.apache.logging.log4j:log4j-slf4j-impl"),
    maven_artifact("com.google.code.gson:gson"),
    maven_artifact("org.apache.datasketches:datasketches-memory"),
    maven_artifact("org.apache.datasketches:datasketches-java"),
    maven_artifact("org.apache.commons:commons-lang3"),
    maven_artifact("org.apache.commons:commons-math3"),
    maven_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
    # Testing
    maven_artifact_with_suffix("org.scalatest:scalatest-matchers-core"),
    maven_artifact_with_suffix("org.scalatest:scalatest-core"),
    maven_artifact_with_suffix("org.scalatest:scalatest"),
    maven_artifact_with_suffix("org.scalatest:scalatest-flatspec"),
    maven_artifact_with_suffix("org.scalatest:scalatest-funsuite"),
    maven_artifact_with_suffix("org.scalatest:scalatest-shouldmatchers"),
    maven_artifact_with_suffix("org.scalactic:scalactic"),
    maven_artifact_with_suffix("org.scalatestplus:mockito-3-4"),
    maven_artifact_with_suffix("org.mockito:mockito-scala"),
    maven_artifact("org.mockito:mockito-core"),
    maven_artifact("org.scalatest:scalatest-compatible"),
    maven_artifact("junit:junit"),
    maven_artifact("com.novocode:junit-interface"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
