scala_library(
    name = "lib",
    srcs = glob(["src/main/**/*.scala"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = [
        "//api:lib",
        "//api:thrift_java",
        maven_artifact("com.fasterxml.jackson.core:jackson-core"),
        maven_artifact("com.fasterxml.jackson.core:jackson-databind"),
        maven_artifact("com.google.code.gson:gson"),
        maven_artifact("org.apache.datasketches:datasketches-memory"),
        maven_artifact("org.apache.datasketches:datasketches-java"),
        maven_artifact("org.apache.commons:commons-lang3"),
        maven_artifact("org.slf4j:slf4j-api"),
        maven_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
        "//tools/build_rules/spark:spark-exec",
    ],
)

test_deps = _SCALA_TEST_DEPS + [
    ":lib",
    "//api:lib",
    "//api:thrift_java",
    maven_artifact("org.slf4j:slf4j-api"),
    maven_artifact("com.google.code.gson:gson"),
    maven_artifact("org.apache.datasketches:datasketches-memory"),
    maven_artifact("org.apache.datasketches:datasketches-java"),
    maven_artifact("org.apache.commons:commons-lang3"),
    maven_artifact("org.apache.commons:commons-math3"),
    maven_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
]

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    format = True,
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
