scala_library(
    name = "cloud_aws_lib",
    srcs = glob(["src/main/**/*.scala"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = [
        maven_artifact("software.amazon.awssdk:dynamodb"),
        maven_artifact("software.amazon.awssdk:regions"),
        maven_artifact("software.amazon.awssdk:aws-core"),
        maven_artifact("software.amazon.awssdk:sdk-core"),
        maven_artifact("software.amazon.awssdk:utils"),
        maven_artifact("software.amazon.awssdk:emr"),
        maven_artifact("com.google.guava:guava"),
        maven_artifact("org.slf4j:slf4j-api"),
        scala_artifact_with_suffix("org.scala-lang.modules:scala-collection-compat"),
        "//api:lib",
        "//api:thrift_java",
        "//online:lib",
        "//spark:lib",
    ],
)

test_deps = [
    ":cloud_aws_lib",
    "//api:lib",
    "//online:lib",
    "//spark:lib",
    maven_artifact("software.amazon.awssdk:dynamodb"),
    maven_artifact("software.amazon.awssdk:regions"),
    maven_artifact("software.amazon.awssdk:aws-core"),
    maven_artifact("software.amazon.awssdk:sdk-core"),
    maven_artifact("software.amazon.awssdk:utils"),
    maven_artifact("software.amazon.awssdk:auth"),
    maven_artifact("software.amazon.awssdk:emr"),
    maven_artifact("software.amazon.awssdk:identity-spi"),
    scala_artifact_with_suffix("org.typelevel:cats-core"),
    maven_artifact("com.amazonaws:DynamoDBLocal"),
    scala_artifact_with_suffix("com.chuusai:shapeless"),
    maven_artifact("junit:junit"),
    scala_artifact_with_suffix("org.mockito:mockito-scala"),
    maven_artifact("org.mockito:mockito-core"),
] + _CIRCE_DEPS + _SCALA_TEST_DEPS

scala_library(
    name = "test_lib",
    srcs = glob(["src/test/**/*.scala"]),
    format = select({
        "//tools/config:scala_2_13": False,  # Disable for 2.13
        "//conditions:default": True,  # Enable for other versions
    }),
    visibility = ["//visibility:public"],
    deps = test_deps,
)

scala_test_suite(
    name = "tests",
    srcs = glob(["src/test/**/*.scala"]),
    # defined in prelude_bazel file
    jvm_flags = _JVM_FLAGS_FOR_ACCESSING_BASE_JAVA_CLASSES,
    visibility = ["//visibility:public"],
    deps = test_deps + [":test_lib"],
)
